Fixed: Update issue form: comment field from log time end out of screen (#1227).
git-svn-id: http://redmine.rubyforge.org/svn/trunk@1427 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -241,6 +241,8 @@ text-align: left;
 width: 200px;
 }
 
+input#time_entry_comments { width: 90%;}
+
 #preview fieldset {margin-top: 1em; background: url(../images/draft.png)}
 
 .tabular.settings p{ padding-left: 300px; }
